--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,58 @@ body {
     margin: 20px;
 }
 
+html, body, #root {
+    height: 100%;
+}
+
+.welcome {
+    display: flex;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 100px;
+    width: 100%;
+    height: 100%;
+}
+
+.popup {
+    width: 350px;
+    height: 250px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 20px;
+    text-align: center;
+}
+
+.input-start {
+    margin-top: 18px;
+    height: 26px;
+    font-size: 16px;
+    padding: 2px 10px;
+}
+
+.btn-start {
+    margin-top: 30px;
+    height: 40px;
+    width: 100px;
+    border-radius: 10px;
+    font-size: 16px;
+    border: none;
+    letter-spacing: 0.08em;
+    background-color: coral;
+    transition: background 0.3s linear;
+    cursor: pointer;
+}
+
+.btn-start:hover {
+    background-color: red;
+}
+
+.btn-start:active {
+    background-color: rgb(197, 90, 51);
+}
+
 ol, ul {
     padding-left: 30px;
 }
